项目结构初始化

--- a/Trials.Kevin.SaleOrder.New/Trials.Kevin.SaleOrder.New/appsettings.json
+++ b/Trials.Kevin.SaleOrder.New/Trials.Kevin.SaleOrder.New/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DbConnectionStrings": {
+    "MySqlMesOrder": "Server=192.168.56.101;Database=Dev.Kevin.SaleOrder;Uid=root;Pwd=123456;"
+    //"MySqlMesOrder": "server=service.byzan.iubang.com;userid=root;password=Iubang001!;database=Dev.kevin.SaleOrd;"
+  }
 }
