--- a/Trials.Kevin.SaleOrder.New/Trials.Kevin.Model/Trials.Kevin.Model.csproj
+++ b/Trials.Kevin.SaleOrder.New/Trials.Kevin.Model/Trials.Kevin.Model.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.21" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Trials.Kevin.Contract\Trials.Kevin.Contract.csproj" />
+  </ItemGroup>
+
 </Project>
