--- a/Trials.Kevin.SaleOrder.New/Trials.Kevin.SaleOrder.New/appsettings.Development.json
+++ b/Trials.Kevin.SaleOrder.New/Trials.Kevin.SaleOrder.New/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "DbConnectionStrings": {
+    "MySqlMesOrder": "Server=192.168.56.101;Database=Dev.Kevin.SaleOrder;Uid=root;Pwd=123456;"
+    //"MySqlMesOrder": "server=service.byzan.iubang.com;userid=root;password=Iubang001!;database=Dev.kevin.SaleOrd;"
   }
 }
